change links and update text